@@ -19,13 +19,12 @@
  * <http://www.gnu.org/licenses/lgpl-3.0.html>.
  * #L%
  */
-package org.apromore.service.loganimation.recording;
+package org.apromore.service.loganimation2.recording;
 
-import java.util.Arrays;
+import java.util.List;
 
-import org.apromore.service.loganimation2.modelmapping.OldBpmnModelMapping;
 import org.apromore.service.loganimation2.recording.*;
-import org.apromore.service.loganimation2.replay.AnimationData;
+import org.apromore.service.loganimation2.data.AnimationData;
 import org.json.JSONArray;
 import org.junit.Assert;
 import org.junit.Test;
@@ -35,10 +34,9 @@ public class MovieTest extends TestDataSetup {
     @Test
     public void test_getChunkJSON_OneLog() throws Exception {
         AnimationData result = this.animate_OneTraceAndCompleteEvents_BPMNDiagram();
-        AnimationContext animationContext = new AnimationContext(result.getAnimationLogs(), 60, 600);
-        ModelMapping modelMapping = new OldBpmnModelMapping(result.getBpmnDiagram());
-        AnimationIndex animationIndex = new AnimationIndex(result.getAnimationLogs().get(0), modelMapping, animationContext);
-        Movie movie = FrameRecorder.record(Arrays.asList(animationIndex), animationContext);
+        AnimationContext animationContext = new AnimationContext(result.getStartTimestamp(), result.getEndTimestamp(), 60, 600);
+        AnimationIndex animationIndex = new AnimationIndex(result.getEnablementLogs().get(0), result, animationContext);
+        Movie movie = FrameRecorder.record(List.of(animationIndex), animationContext);
         
         Assert.assertEquals(36000, movie.size());
         
@@ -54,10 +52,8 @@ public class MovieTest extends TestDataSetup {
     @Test
     public void test_getChunkJSON_TwoLogs() throws Exception {
         AnimationData result = this.animate_TwoLogs_With_BPMNDiagram();
-        AnimationContext animationContext = new AnimationContext(result.getAnimationLogs(), 60, 600);
-        ModelMapping modelMapping = new OldBpmnModelMapping(result.getBpmnDiagram());
-        Movie movie = FrameRecorder.record(createAnimationIndexes(result.getAnimationLogs(), modelMapping, animationContext),
-                                        animationContext);
+        AnimationContext animationContext = new AnimationContext(result.getStartTimestamp(), result.getEndTimestamp(), 60, 600);
+        Movie movie = FrameRecorder.record(createAnimationIndexes(result, animationContext), animationContext);
         
         Assert.assertEquals(36000, movie.size());
         
